--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,3 +32,9 @@ section#telefone {
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
+
+iframe#tela {
+    position: relative;
+    top: 10px;
+    left: 10px;
+}
