--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,9 @@ section#telefone {
 
 iframe#tela {
     position: relative;
-    top: 10px;
-    left: 10px;
+    top: 80px;
+    left: 20px;
+    height: 471px;
+    width: 269px;
+    
 }
